tests/sksl/errors/ArrayOfInvalidSize.glsl
### Compilation failed:

error: 1: array size must be positive
error: 2: array size must be positive
error: 3: array size must be positive
error: 4: expected 'int', but found 'float'
error: 5: array size is too large
error: 6: expected 'int', but found 'bool'
error: 7: expected 'int', but found 'bool'
error: 8: expected 'int', but found 'int2'
error: 9: array must have a size
error: 10: array size must be positive
error: 11: array size must be positive
error: 12: array size must be positive
error: 13: expected 'int', but found 'float'
error: 14: array size is too large
error: 15: expected 'int', but found 'bool'
error: 16: expected 'int', but found 'bool'
error: 17: expected 'int', but found 'int2'
error: 18: array must have a size
18 errors
